Public/stylesheets/main.css
/* Base colours ------------------------------------------------------------ */

:root {
  --very-dark-blue: #111930;
  --dark-blue: #232339;
  --mid-blue: #356FCE;
  --light-blue: #BEDEFF;
  --very-light-blue: #E6F2FF;

  --dark-green: #027353;
  --mid-green: #038C33;
  --light-green: #5FBF1B;

  --yellow: #F2B94F;
  --mid-red: #CC4444;
  --light-red: #FFEEEE;

  --black: #1D1D1D;
  --very-dark-grey: #2F2F2F;
  --dark-grey: #3E3E3E;
  --grey: #9A9A9A;
  --light-grey: #DADADA;
  --very-light-grey: #F1F1F1;
  --white: #FFFFFF;
}

@media (prefers-color-scheme: dark) {
  :root {
    --black: #070710;
    --very-dark-grey: #191923;

    --mid-blue: #55B7FF;
    --mid-red: #FF4343;
    --dark-red: #250201;
    --yellow: #FFB834;

    --mid-green: #0EBF4C;
    --light-green: #96FF4C;
    --dark-green: #0C946E;
  }
}

/* Light mode colours ------------------------------------------------------ */

:root {
  --page-background: var(--white);
  --page-text: var(--black);
  --link-text: var(--mid-blue);
  --link-highlight: var(--mid-red);

  --header-background: var(--dark-blue);
  --header-text: var(--white);
  --header-link-text: var(--white);
  --header-link-highlight: var(--yellow);
  --header-gradient-start: rgba(255, 255, 255, 0.2);
  --header-gradient-end: rgba(255, 255, 255, 0.05);

  --input-background: var(--white);
  --input-text: var(--black);
  --input-placeholder: var(--light-grey);

  --results-background: var(--white);
  --results-selected-background: var(--very-light-blue);
  --results-separator: var(--light-grey);
  --results-shadow: rgba(100, 100, 100, 0.2);

  --button-background: var(--very-light-blue);
  --button-text: var(--mid-blue);
  --button-border: var(--light-blue);

  --rule-background: var(--light-blue);

  --license-text: var(--white);
  --license-compatible-background: var(--mid-green);
  --license-incompatible-background: var(--mid-red);

  --stable-text: var(--light-green);
  --beta-text: var(--mid-green);
  --branch-text: var(--dark-green);

  --icon-text: var(--dark-grey);

  --error-background: var(--light-red);
  --error-text: var(--mid-red);

  --code-snippet-background: var(--very-light-grey);
  --code-snippet-text: var(--black);
  --code-snippet-border: var(--grey);
}

@media (prefers-color-scheme: dark) {
  :root {
    --page-background: var(--black);
    --page-text: var(--white);

    --header-background: var(--very-dark-blue);
    --header-gradient-start: rgba(255, 255, 255, 0.08);
    --header-gradient-end: rgba(255, 255, 255, 0.03);

    --input-background: var(--very-dark-grey);
    --input-text: var(--white);
    --input-placeholder: var(--grey);

    --results-background: var(--very-dark-grey);
    --results-selected-background: var(--dark-blue);
    --results-separator: var(--very-dark-grey);
    --results-shadow: rgba(20, 20, 60, 0.3);

    --button-background: var(--dark-blue);
    --button-text: var(--mid-blue);
    --button-border: var(--mid-blue);

    --rule-background: var(--dark-blue);

    --icon-text: var(--light-grey);

    --error-background: var(--dark-red);
    --error-text: var(--mid-red);

    --code-snippet-background: var(--very-dark-grey);
    --code-snippet-text: var(--white);
    --code-snippet-border: var(--grey);
  }
}

/* Base styles ------------------------------------------------------------- */

* {
  box-sizing: border-box;
}

body {
  color: var(--page-text);
  background-color: var(--page-background);
  font-family: "Open Sans", -apple-system, "BlinkMacSystemFont", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  font-size: 16px;
  line-height: 1.4;
}

h1 {
  margin: 0;
  padding: 0;
  font-size: 23px;
  line-height: 1.2;
}

h2 {
  margin: 0;
  padding: 0;
  font-size: 35px;
  line-height: 1;
  letter-spacing: -0.5px;
}

h3 {
  font-size: 22px;
  line-height: 1.2;
}

h4 {
  font-size: 17px;
  line-height: 1.2;
}

a {
  color: var(--link-text);
  text-decoration: none;
}

a:hover {
  color: var(--link-highlight);
}

strong {
  font-weight: 600;
}

small {
  font-size: 11px;
}

pre {
  border: 1px var(--code-snippet-border) solid;
  background-color: var(--code-snippet-background);
  color: var(--code-snippet-text);
  font-size: 14px;
  border-radius: 4px;
  padding: 15px;
  overflow: scroll;
}

hr {
  margin: 40px 0;
  border: 0;
  height: 2px;
  background-color: var(--rule-background);
}

hr.short {
  max-width: 40%;
  height: 1px;
}

noscript {
  display: block;
  padding: 20px 0;
  background-color: var(--error-background);
  color: var(--error-text);
  text-align: center;
}

noscript i {
  font-size: 30px;
}

::placeholder {
  color: var(--input-placeholder);
}

button {
  padding: 2px 4px;
  margin: 0 5px;
  border: 1px var(--button-border) solid;
  background-color: var(--button-background);
  color: var(--button-text);
  border-radius: 3px;
  font-weight: 600;
  font-size: 9px;
}

button:focus {
  outline: none;
}

/* Icon font --------------------------------------------------------------- */

@font-face {
  font-family: "icomoon";
  src:
    url("/fonts/icomoon.ttf?6e6v40") format("truetype"),
    url("/fonts/icomoon.woff?6e6v40") format("woff"),
    url("/fonts/icomoon.svg?6e6v40#icomoon") format("svg");
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

i.icon,
li.icon:before {
  speak: none;
  font-family: "icomoon" !important;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  vertical-align: baseline;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

div i.icon {
  margin-right: 7px;
}

span i.icon {
  display: inline-block;
  margin-top: -3px;
  margin-right: 4px;
  font-size: 20px;
}

li.icon {
  list-style: none;
}

li.icon:before {
  margin-left: -35px;
  margin-right: 15px;
  color: var(--icon-text);
  font-size: 18px;
}

i.osi:before { content: "\e900"; }
i.stable:before { content: "\e906"; }
i.beta:before { content: "\e907"; }
/* ... */

